--- a/app/views/proposals/index.html.erb
+++ b/app/views/proposals/index.html.erb
@@ -1,2 +1,11 @@
 <h1>Proposals#index</h1>
 <p>Find me in app/views/proposals/index.html.erb</p>
+<div class="card-content">
+<button class="btn">Default</button>
+<button class="btn btn-primary">Primary</button>
+<button class="btn btn-info">Info</button>
+<button class="btn btn-success">Success</button>
+<button class="btn btn-warning">Warning</button>
+<button class="btn btn-danger">Danger</button>
+<button class="btn btn-rose">Rose</button>
+</div>
