--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,13 +10,14 @@
             <div class="card-content">
                  <h6 class="category text-gray">Mes informations</h6>
                  <br>
-                 <h4 class="card-title">Username Name</h4>
+                 <h4 class="card-title"><%= @user.first_name %> <%= @user.last_name %></h4>
                  <br>
-                 <p class="text">Email@email.com</p>
-                 <p class="text">Ville/Location</p>
+                 <p class="text"><%= @user.email %></p>
+                 <p class="text"><%= @user.city %></p>
                  <br>
-                 <a href="#pablo" class="btn btn-primary btn-round btn-sm">Modifier mes informations</a>
-                 <a href="#pablo" class="btn btn-primary btn-round btn-sm">Changer le mot de passe</a>
+                 <div class="p-1 mb-1">
+                     <%= link_to "Modifier mon mot de passe", edit_user_registration_path, class: "btn btn-primary btn-round btn-sm" %> 
+                     <%= link_to "Éditer mon profil", edit_user_path, class: "btn btn-primary btn-round btn-sm" %></div>
             </div>
         </div> 
     </div>
@@ -32,15 +33,15 @@
              </div>
              <div class="card-content "> 
                  <table class="table">
-                 
-                     <tbody>
-                         <tr>
-                             <td><h5>Passage piéton pour canard</h5></td>
-                                 <td class="text-right"> Nb de vote
-                                 <td class="text-right"> <button class="btn btn-primary btn-xs">Voir la proposition</button>
-                             </td>
-                         </tr>
-                     </tbody>
+                     <% @user.proposals.each do |proposals| %>
+                         <tbody>
+                             <tr>
+                                 <td><h5><%= proposals.title %></h5></td>
+                                     <td class="text-right"> <button class="btn btn-primary btn-xs">Voir la proposition</button>
+                                 </td>
+                             </tr>
+                         </tbody>
+                     <% end %>
                  </table>
              </div>
          </div>
