--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <body>
    <%= render 'layouts/flash' %>
-   <!--<%#= render "layouts/navbar"%> -->
+   <%= render "layouts/navbar"%>
     <%= yield %>
      <!--<%#= render "layouts/footer"%> -->
   </body>
