--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,3 +14,15 @@
  *= require material-dashboard
  */
 
+.logo-img {
+    position:absolute;
+    left:-8px;
+    top:-4px;
+    margin: 0px 0px 0px 0px;
+    width: 100px;
+    height: 100px;
+}
+
+.font-navbar {
+  font-size: 100px;
+}
