--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,22 +1,19 @@
 <nav class="navbar navbar-primary">
+
   <div class="container-fluid">
-    
+<div class="font-navbar">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Agora</a>
+              <%= link_to image_tag("logo.png", alt: "logo"), '/', class: 'navbar-brand logo-img' %>
+
+      <!--<a class="navbar-brand" href="#">Agora</a>-->
     </div>
 
  
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
+      <ul class="nav navbar-nav font-navbar">
         
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Villes <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Villes disponibles <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">Paris</a></li>
             <li><a href="#">Lyon</a></li>
@@ -24,14 +21,15 @@
             <li><a href="#">Marseille</a></li>
           </ul>
         </li>
-         <form class="navbar-form navbar-left">
-        <button type="submit" class="btn btn-info">Créer ma proposition</button>
-      </form>
+        
       <li><a href="#">À propos d'Agora</a></li>
       </ul>
      
       
       <ul class="nav navbar-nav navbar-right">
+       <form class="navbar-form navbar-left">
+        <button type="submit" class="btn btn-info">Créer ma proposition</button>
+      </form>
       <!--  <#% if user_signed_in? == true%> -->
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Bienvenue <span class="caret"></span></a>
@@ -56,4 +54,28 @@
      <!-- <#% end %> -->
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
+  </div>
 </nav>
+
+<script>
+  $(document).ready(() => {
+    $("#category").change(() => {
+      let category_id = $("#category").val();
+      
+      let url = "/categories/" + category_id + "/items";
+      
+
+      const Http = new XMLHttpRequest();
+      Http.open("GET", url, true);
+      Http.send();
+
+      Http.onreadystatechange = (e) => {
+        result = Http.responseText;
+        console.log(result);
+        $('#items_container').remove(); 
+        let items_container = $(result).filter('#items_container')[0];
+        $('#category_selector').after(items_container);
+      }
+    });
+  });
+</script>
