--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
   </head>
 
@@ -14,6 +15,6 @@
    <%= render 'layouts/flash' %>
    <!--<%#= render "layouts/navbar"%> -->
     <%= yield %>
-     <!--<%#= render "layouts/footer"%> -->
+    <%= render "layouts/footer"%> 
   </body>
 </html>
