--- a/app/views/proposals/index.html.erb
+++ b/app/views/proposals/index.html.erb
@@ -1,45 +1,48 @@
-<h1>Proposals#index</h1>
-<p>Find me in app/views/proposals/index.html.erb</p>
-<div class="card-content">
-<button class="btn">Default</button>
-<button class="btn btn-primary">Primary</button>
-<button class="btn btn-info">Info</button>
-<button class="btn btn-success">Success</button>
-<button class="btn btn-warning">Warning</button>
-<button class="btn btn-danger">Danger</button>
-<button class="btn btn-rose">Rose</button>
+<div class="jumbotron" style="background-image: url(https://images.unsplash.com/photo-1547104984-924116a9c464?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1217&q=80); background-size: 100%;">
+  <div class="container">
+    <h1 class="display-4 text-white"><b>Faites porter votre voix et agissez ensemble dans votre ville</b></h1>
+    <p  class="text-white">Agora est une plate-forme citoyenne vous permettant de proposer et de partager des initiatives locales  </p>
+    <p><a class="btn btn-primary btn-lg" href="#" role="button">Je veux créer ma proposition</a></p>
+  </div>
 </div>
 
-<nav class="navbar navbar-default" role="navigation">
-	<div class="container-fluid">
-    	<div class="navbar-header">
-    		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-    		</button>
-    		<a class="navbar-brand" href="#">Brand</a>
-    	</div>
-
-    	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    		<ul class="nav navbar-nav">
-				<li class="active"><a href="#">Link</a></li>
-        		<li><a href="#">Link</a></li>
-        		<li class="dropdown">
-        			<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-        			<ul class="dropdown-menu">
-					  <li><a href="#">Action</a></li>
-					  <li><a href="#">Another action</a></li>
-					  <li><a href="#">Something else here</a></li>
-					  <li class="divider"></li>
-					  <li><a href="#">Separated link</a></li>
-					  <li class="divider"></li>
-				      <li><a href="#">One more separated link</a></li>
-        			</ul>
-        		</li>
-    		</ul>
-    	</div>
-	</div>
-</nav>
-	    	
+<div class="container">
+  <h1 class="text-center"><b>Comment ça marche?</b></h1>
+  <br>
+  <br>
+  <div class="row featurette">
+    <div class="col-md-7">
+      <h2 class="featurette-heading">Consultez et votez pour les propositions de votre ville <i class="material-icons" style="font-size: 35px">how_to_vote</i>
+      <p class="lead">Chaque jour des citoyens des votre ville postent des propositions pour améliorer le quotidien de la ville. Consultez et débattez des propositions ensemble!</p>
+    </div>
+    <div class="col-md-5">
+      <img src = "https://images.unsplash.com/photo-1516321497487-e288fb19713f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" width="607,5" height="405" >
+    </div>
+  </div>
+  <br>
+  <br>
+  <br>
+  <div class="row featurette">
+    <div class="col-md-7 order-md-2">
+      <h2 class="featurette-heading">Proposez des idées sur des thèmes qui vous inspirent <i class="material-icons" style="font-size: 35px">wb_incandescent</i></h2>
+      <p class="lead">Une idée vous inspire depuis longtemos? Sur Agora, vous êtes libres de proposer vos idées pour la ville. Nous veillons à ce que les propositions les plus pertinentes soient présentes.</p>
+    </div>
+    <div class="col-md-5 order-md-1">
+      <img src = "https://images.unsplash.com/photo-1550418290-a8d86ad674a6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" width="607,5" height="405" >
+    </div>
+  </div>
+  <br>
+  <br>
+  <br>
+   <div class="row featurette">
+    <div class="col-md-7 order-md-2">
+      <h2 class="featurette-heading">Sélectionnez les meilleures idées ensemble et agissez!<i class="material-icons" style="font-size: 35px">people</i></h2>
+      <p class="lead">Sur Agora, le système de vote permet de faire ressortir les meilleures propositions. Ensemble, unissez-vous pour faire avancer les choses!</p>
+    </div>
+    <div class="col-md-5 order-md-1">
+      <img src = "https://images.unsplash.com/photo-1543269865-cbf427effbad?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" width="607,5" height="405" >
+    </div>
+  </div>
+  
+  
+</div>
