--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,7 +13,7 @@
                  <h4 class="card-title"><%= @user.first_name %> <%= @user.last_name %></h4>
                  <br>
                  <p class="text"><%= @user.email %></p>
-                 <p class="text"><%= @user.city %></p>
+                 <p class="text"><%= @user.city.name %></p>
                  <br>
                  <div class="p-1 mb-1">
                      <%= link_to "Modifier mon mot de passe", edit_user_registration_path, class: "btn btn-primary btn-round btn-sm" %> 
@@ -28,7 +28,7 @@
 <div class="container" style="width: 70em;">
      <div class="row justify-content-center">
          <div class="card">
-             <div class="card-header card-header-text" data-background-color="rose">
+             <div class="card-header card-header-text" data-background-color="blue">
                  <h4 class="card-title">Vos propositions</h4>
              </div>
              <div class="card-content "> 
