--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,8 @@
   <div class="content">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-md-5">
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
           <div class="card">
             <form id="RegisterValidation" action="" method="">
               <div class="card-header card-header-icon" data-background-color="blue">
@@ -60,6 +61,7 @@
             </form>
           </div>
         </div>
+        <div class="col-md-4"></div>
       </div>
     </div>
   </div>
