--- a/app/views/proposals/index.html.erb
+++ b/app/views/proposals/index.html.erb
@@ -7,7 +7,7 @@
 </div>
 
 <div class="container">
-  <h1 class="text-center"><b>Comment ça marche?</b></h1>
+  <h2 class="text-center"><b>Comment ça marche?</b></h2>
   <br>
   <br>
   <div class="row featurette">
@@ -25,7 +25,7 @@
   <div class="row featurette">
     <div class="col-md-7 order-md-2">
       <h2 class="featurette-heading">Proposez des idées sur des thèmes qui vous inspirent <i class="material-icons" style="font-size: 35px">wb_incandescent</i></h2>
-      <p class="lead">Une idée vous inspire depuis longtemos? Sur Agora, vous êtes libres de proposer vos idées pour la ville. Nous veillons à ce que les propositions les plus pertinentes soient présentes.</p>
+      <p class="lead">Une idée vous inspire depuis longtemps? Sur Agora, vous êtes libres de proposer vos idées pour la ville. Nous veillons à ce que les propositions les plus pertinentes soient présentes.</p>
     </div>
     <div class="col-md-5 order-md-1">
       <img src = "https://images.unsplash.com/photo-1550418290-a8d86ad674a6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" width="607,5" height="405" >
@@ -34,15 +34,89 @@
   <br>
   <br>
   <br>
-   <div class="row featurette">
+  <div class="row featurette">
     <div class="col-md-7 order-md-2">
       <h2 class="featurette-heading">Sélectionnez les meilleures idées ensemble et agissez!<i class="material-icons" style="font-size: 35px">people</i></h2>
       <p class="lead">Sur Agora, le système de vote permet de faire ressortir les meilleures propositions. Ensemble, unissez-vous pour faire avancer les choses!</p>
     </div>
     <div class="col-md-5 order-md-1">
-      <img src = "https://images.unsplash.com/photo-1543269865-cbf427effbad?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" width="607,5" height="405" >
+    <img src = "https://images.unsplash.com/photo-1543269865-cbf427effbad?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" width="607,5" height="405" >
+  </div>
+  </div>
+</div>
+<br>
+<br>
+
+<div class="jumbotron" style="background-image: url(https://images.unsplash.com/photo-1547104984-924116a9c464?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1217&q=80); background-size: 100%;">
+  <div class="container">
+    <h3 class="display-4 text-white"><b>Faites porter votre voix et changez votre ville!</b></h3>
+    <p><a class="btn btn-primary btn-lg" href="#" role="button">Je veux créer ma proposition</a></p>
+  </div>
+</div>
+
+<div class = "container">
+<h2 class="text-center"><b>Les meilleures propositions du moment</b></h2>
+  <div class="col-md-6">
+    <h3 class="text-center"><b>Paris</b></h3>
+    <div class="card">
+    <div class="card-content table-responsive table-full-width">
+      <table class="table">
+        <tbody>
+          <%@proposal_paris.each do |x|%>
+          <tr>
+            <td></td>
+            <td>
+              <h5>#<%=@proposal_paris.index(x)+1%></h5>
+            </td>
+            <td>
+              <img src = "https://images.pexels.com/photos/338515/pexels-photo-338515.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" style="height: 100px; width: 100px;">
+            </td>
+            <td>
+              <h4><%=x.title=%></h4>
+              <span class="badge badge-primary"><%=Category.find(x.category_id).name%></span>
+              <a href = "">Voir la proposition</a>
+            </td>
+            <td><td>
+          </tr>
+          <%end%>
+        </tbody>
+      </table>
     </div>
   </div>
-  
-  
+</div>
+  <div class="col-md-6">
+    <h3 class="text-center"><b>Lyon</b></h3>
+    <div class="card">
+    <div class="card-content table-responsive table-full-width">
+      <table class="table">
+        <tbody>
+          <%@proposal_lyon.each do |x|%>
+          <tr>
+            <td></td>
+            <td>
+              <h5>#<%=@proposal_lyon.index(x)+1%></h5>
+            </td>
+            <td>
+              <img src = "https://images.pexels.com/photos/338515/pexels-photo-338515.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" style="height: 100px; width: 100px;">
+            </td>
+            <td>
+              <h4><%=x.title=%></h4>
+              <span class="badge badge-primary"><%=Category.find(x.category_id).name%></span>
+              <a href = "">Voir la proposition</a>
+            </td>
+            <td><td>
+          </tr>
+          <%end%>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  </div>
+</div>
+
+<div class="jumbotron" style="background-image: url(https://images.unsplash.com/photo-1547104984-924116a9c464?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1217&q=80); background-size: 100%;">
+  <div class="container">
+    <h3 class="display-4 text-white"><b>Votre ville n'est pas encore disponible? Dites-nous d'ou vous venez!</b></h3>
+    <p><a class="btn btn-primary btn-lg" href="mailto: zeagoraproject@gmail.com" role="button">Envoyer un mail</a></p>
+  </div>
 </div>
