improve some methodes

--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -12,11 +12,11 @@
 	<div class="card-content table-responsive table-full-width">
 		<table class="table">
 			<tbody>
-				<%@proposal.each do |x|%>
+				<% @proposals.each do |x| %>
         <tr>
           <td></td>
 					<td>
-            <h5>#<%=@proposal.index(x)+1%></h5>
+            <h5>#<%= @proposals.index(x)+1 %></h5>
           </td>
           <td>
             <img src = "https://images.pexels.com/photos/338515/pexels-photo-338515.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" style="height: 100px; width: 100px;">
