--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,8 +3,13 @@
   <div class="container-fluid">
 
     <div class="navbar-header navbar-left">
-              <%= link_to image_tag("logo_smallv2.png", alt: "logo", style: "width:25%"), '/', class: 'navbar-brand logo-img'%>
-      <a class="navbar-brand agora-dropdown font-navbar" href="#"></a>
+     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+    		</button>
+    		<a class="navbar-brand font-brand"  href="#">Agora</a>
     </div>
 
  
@@ -24,10 +29,9 @@
       </ul>
      
       
+      
       <ul class="nav navbar-nav navbar-right">
-       <form class="navbar-form navbar-left">
-        <button type="submit" class="btn btn-info">Créer ma proposition</button>
-      </form>
+       
       <!--  <#% if user_signed_in? == true%> -->
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Bienvenue <span class="caret"></span></a>
@@ -50,6 +54,10 @@
           </ul>
         </li>
       </ul>
+      <form class="navbar-form navbar-right">
+       
+        <button type="submit" class="btn btn-info">Créer ma proposition</button>
+      </form>
      <!-- <#% end %> -->
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
