--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,7 +9,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
     		</button>
-    		<a class="navbar-brand font-brand"  href="#">Agora</a>
+    		<a class="navbar-brand font-brand"  href="/">Agora</a>
     </div>
 
  
@@ -32,18 +32,18 @@
       
       <ul class="nav navbar-nav navbar-right">
        
-      <!--  <#% if user_signed_in? == true%> -->
+      <% if user_signed_in? == true%>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Bienvenue <span class="caret"></span></a>
           <ul class="dropdown-menu">
             
 
-            <!-- <li><#%= link_to "Mon profil", user_path(current_user.id), :class => "dropdown-item" %> </li> -->
+            <li><%= link_to "Mon profil", user_path(current_user.id), :class => "dropdown-item" %> </li> 
             <li> <%= link_to "Se déconnecter", destroy_user_session_path, :class => "dropdown-item", method: :delete %></li>
         
           </ul>
         </li>
-       <!--  <#% else %> -->
+        <% else %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Connexion/Inscription <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -54,11 +54,12 @@
           </ul>
         </li>
       </ul>
+       <% end %> 
       <form class="navbar-form navbar-right">
        
         <button type="submit" class="btn btn-info">Créer ma proposition</button>
       </form>
-     <!-- <#% end %> -->
+    
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
   
