--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,5 +1,5 @@
 <% flash.each do |type, msg| %>
-  <div class="alert <%= flash_class(type) %> alert-dismissable fade show mt-1 py-1 " role="alert">
+  <div class="alert <%= flash_class(type) %> show" role="alert">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">×</span>
     </button>
