--- a/app/views/proposals/index.html.erb
+++ b/app/views/proposals/index.html.erb
@@ -72,8 +72,8 @@
               <img src = "https://images.pexels.com/photos/338515/pexels-photo-338515.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" style="height: 100px; width: 100px;">
             </td>
             <td>
-              <h4><%=x.title=%></h4>
-              <span class="badge badge-primary"><%=Category.find(x.category_id).name%></span>
+              <h4><%= x.title %></h4>
+              <span class="badge badge-primary"><%= x.category.name %></span>
               <a href = "">Voir la proposition</a>
             </td>
             <td><td>
