--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,5 @@
 <nav class="navbar navbar-primary">
-  
   <div class="container-fluid">
-    
     <div class="navbar-header navbar-left">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span>
@@ -11,58 +9,42 @@
       </button>
       <a class="navbar-brand font-brand"  href="/">Agora</a>
     </div>
-    
-    
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        
         <li class="dropdown city-dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Villes disponibles <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <%City.all.each do |city|%>
-            <li><%= link_to city.name, city_path(city.id) %></li>
+            <% City.all.each do |city|%>
+              <li><%= link_to city.name, city_path(city.id) %></li>
             <%end%> 
           </ul>
         </li>
-        
         <li class="city-dropdown"><a href="#">À propos d'Agora</a></li>
       </ul>
       
-      
-      
+
       <ul class="nav navbar-nav navbar-right">
-        
-        <% if user_signed_in? == true%>
+        <li><%= link_to 'Créer ma proposition', new_proposal_path, class: 'btn btn-info' %></li>
+        <% if user_signed_in? %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Bienvenue <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            
-            
             <li><%= link_to "Mon profil", user_path(current_user.id), :class => "dropdown-item" %> </li> 
             <li> <%= link_to "Se déconnecter", destroy_user_session_path, :class => "dropdown-item", method: :delete %></li>
-            
           </ul>
         </li>
         <% else %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Connexion/Inscription <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            
-            <li><a href="/users/sign_in">Se connecter</a></li>
-            <li><a href="/users/sign_up">S'inscrire</a></li>
-            
+            <li><%= link_to 'Se connecter', new_user_session_path %></li>
+            <li><%= link_to 'S\'inscrire', new_user_registration_path %></li>
           </ul>
         </li>
       </ul>
       <% end %> 
-      <form class="navbar-form navbar-right">
-        
-        <button type="submit" class="btn btn-info">Créer ma proposition</button>
-      </form>
-      
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
-  
 </nav>
 
 <script>
