--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,12 @@
   <div class="row justify-content-center">
     <div class="card card-profile">
       <div class="card-avatar">
-        <img class="img" src="https://cutewallpaper.org/21/iron-man-profile-picture/Iron-Man-Forum-Avatar-Profile-Photo-ID-131347-Avatar-.jpg" />
+        <%if @user.avatar.attached?%>
+          <%= image_tag @user.avatar, alt: 'Avatar' %>
+        <%else%>
+          <p>Aucun avatar</p>
+          <!--<img class="img" src="https://cutewallpaper.org/21/iron-man-profile-picture/Iron-Man-Forum-Avatar-Profile-Photo-ID-131347-Avatar-.jpg" />-->
+        <%end%>
       </div>
       <div class="card-content">
         <h6 class="category text-gray">Mes informations</h6>
@@ -17,7 +22,7 @@
         <br>
         <div class="p-1 mb-1">
           <%= link_to "Modifier mon mot de passe", edit_user_registration_path, class: "btn btn-primary btn-round btn-sm" %> 
-          <%= link_to "Éditer mon profil", edit_user_path, class: "btn btn-primary btn-round btn-sm" %></div>
+          <%= link_to "Éditer mon profil", edit_user_path(@user), class: "btn btn-primary btn-round btn-sm" %></div>
         </div>
       </div> 
     </div>
@@ -29,7 +34,7 @@
     <div class="row justify-content-center">
       <div class="card">
         <div class="card-header card-header-text" data-background-color="blue">
-          <h4 class="card-title">Vos propositions</h4>
+          <h4 class="card-title">Mes propositions</h4>
         </div>
         <div class="card-content "> 
           <table class="table">
