--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -24,7 +24,7 @@
       
 
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to 'Créer ma proposition', new_proposal_path, class: 'btn btn-info' %></li>
+        <li><%= link_to 'Créer ma proposition', new_user_proposal_path(current_user.id), class: 'btn btn-info' %></li>
         <% if user_signed_in? %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Bienvenue <span class="caret"></span></a>
