--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,12 +1,12 @@
-<nav class="navbar navbar-primary">
+<nav class="navbar navbar-primary" role="navigation">
   <div class="container-fluid">
-    <div class="navbar-header navbar-left">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
+    <div class="navbar-header">
+     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+    		</button>
       <a class="navbar-brand font-brand"  href="/">Agora</a>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -24,8 +24,9 @@
       
 
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to 'Créer ma proposition', new_proposal_path, class: 'btn btn-info' %></li>
+       
         <% if user_signed_in? %>
+         <li><%= link_to 'Créer ma proposition', new_proposal_path, class: 'btn btn-info' %></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Bienvenue <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -33,9 +34,10 @@
             <li> <%= link_to "Se déconnecter", destroy_user_session_path, :class => "dropdown-item", method: :delete %></li>
           </ul>
         </li>
+        
         <% else %>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Connexion/Inscription <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Connexion <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><%= link_to 'Se connecter', new_user_session_path %></li>
             <li><%= link_to 'S\'inscrire', new_user_registration_path %></li>
@@ -47,25 +49,4 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-<script>
-  $(document).ready(() => {
-    $("#category").change(() => {
-      let category_id = $("#category").val();
-      
-      let url = "/categories/" + category_id + "/items";
-      
-      
-      const Http = new XMLHttpRequest();
-      Http.open("GET", url, true);
-      Http.send();
-      
-      Http.onreadystatechange = (e) => {
-        result = Http.responseText;
-        console.log(result);
-        $('#items_container').remove(); 
-        let items_container = $(result).filter('#items_container')[0];
-        $('#category_selector').after(items_container);
-      }
-    });
-  });
-</script>
+
