--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -7,16 +7,7 @@
         </div>
         <div class="card-content">
           <h4 class="card-title">Editer mon profil</h4>
-            <form class="form-horizontal">
-              <div class="row">
-                <%= form_for(current_user, url: user_path(current_user), html: { method: :patch, class: "form-signin" }) do |f| %>
-                  <label class="col-md-3 label-on-left"><%= f.label :email, "Email" %></label>                                              
-                    <div class="col-md-9">
-                      <div class="form-group is-empty">
-                        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
-                      </div>
-                  </div>
-              </div>
+                <%= form_for(current_user, url: user_path(current_user), html: { method: :put, class: "form-horizontal" }) do |f| %>
               <div class="row">
                   <label class="col-md-3 label-on-left"><%= f.label :first_name, "Prénom" %></label>                                              
                       <div class="col-md-9">
@@ -43,7 +34,6 @@
               </div>
             <% end %>
           <div class="col-md-3"></div>
-        </form>
       </div>
     </div>
   </div>
