first commit semi done

--- a/app/views/proposals/index.html.erb
+++ b/app/views/proposals/index.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <h1 class="display-4 text-white"><b>Faites porter votre voix et agissez ensemble dans votre ville</b></h1>
     <p  class="text-white">Agora est une plate-forme citoyenne vous permettant de proposer et de partager des initiatives locales  </p>
-    <p><a class="btn btn-primary btn-lg" href="#" role="button">Je veux créer ma proposition</a></p>
+    <p><a class="btn btn-primary btn-lg" href="<%= new_proposal_path %>" role="button">Je veux créer ma proposition</a></p>
   </div>
 </div>
 
