--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,8 +3,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-4">
-        <%= image_tag("logo_small.png", style: "width:50%") %>
-        <br><br>
+        <h2>Agora</h2>
         <p class="pr-5 text-white-50">Vous aussi concrétisez votre projet !</p>
         <br>
         <div class="text-left center-block">
