--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -1,4 +1,4 @@
-<div class="jumbotron jumbotron-fluid" style="background-image: url(https://images.pexels.com/photos/87501/pexels-photo-87501.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940); background-size: 100%;">
+<div class="jumbotron jumbotron-fluid" style="background-image: url(https://images.pexels.com/photos/19670/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940); background-size: 100%;">
   <div class="container">
     <h1 class="display-4">Les propositions citoyennes à <%=@city.name%></h1>
     <p class="lead">Retrouvez les meilleurs propositions du moment ci-dessous</p>
