Change primary color

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -2,7 +2,7 @@
 /* import the necessary Bootstrap files */
 @import "material-dashboard/variables";
         
-$brand-primary: #34ace0;
+$brand-primary: #1D6DB8;
 //$brand-success: #3dc1d3;
 
 /* finally, import Bootstrap to set the changes! */
