--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -50,4 +50,18 @@
   </div><!-- /.container-fluid -->
 </nav>
 
+<script> 
+   /*$('.navbar-toggle').click(function() {
+    var isExpanded = $('.navbar-toggle').attr('aria-expanded') === true;
+    if(isExpanded) {
+      $('.navbar-toggle').click();
+    }
+    
+    console.log("test")
+  });
+*/
 
+$('.perfect-scrollbar-off').click(function() {
+console.log("test")
+})
+</script>
