--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-md-4">
         <h2>Agora</h2>
-        <p class="pr-5 text-white-50">Vous aussi concrétisez votre projet !</p>
+        <p class="pr-5 text-white-50">Vous aussi, concrétisez votre projet !</p>
         <br>
         <div class="text-left center-block">
           <a href="https://www.facebook.com" style="color:#34ace0;"><i id="social-fb" class="fa fa-facebook-square fa-3x social"></i></a>
@@ -14,11 +14,11 @@
         </div>
       </div>
       <div class="col-md-4">
-        <h4 class=" mt-sm-3">Nous connaitre</h4>
-        <p><a href="#" style="color:Gray;">A propos</a></p>
+        <h4 class=" mt-sm-3">Nous connaître</h4>
+        <p><a href="#" style="color:Gray;">À propos</a></p>
         <p><a href="#" style="color:Gray;">Mentions légales </a></p>
         <p><a href="#" style="color:Gray;">Notre charte</a></p>
-        <p><a href="#" style="color:Gray;">Politiques de confidentialités</a></p>
+        <p><a href="#" style="color:Gray;">Politique de confidentialité</a></p>
         <p><a href="#" style="color:Gray;">FAQ</a></p>
       </div>
       <div class="col-md-4">
@@ -26,7 +26,7 @@
         <br>
         <p>22 rue des lauriers, 33000 Bordeaux</p>
         <p class="mb-0"><i class="fa fa-phone mr-3"></i> 05 62 23 55 89</p>
-        <p><i class="fa fa-envelope-o mr-3"></i> agora@gmail.com</p>
+        <p><i class="fa fa-envelope-o mr-3"></i> zeagoraproject@gmail.com</p>
       </div>
     </div>
     <div class="row mt-5">
