--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<br><br>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 <%= render "devise/shared/error_messages", resource: resource %>
 <div class="content">
@@ -32,7 +33,7 @@
               </div>
               <div class="form-group label-floating">
                 <label class="control-labe">
-                  <%= f.label :city, "Ville *" %>                                                                   
+                  <%= f.label :city, "Ville * (Les prochaines villes arrivent bientôt ;)" %>                                                                   
                 </label>
                 <br>
                 <%= f.collection_select :city_id, City.all, :id, :name, prompt: true %>
@@ -66,5 +67,6 @@
   </div>
 </div>
 <% end %>
+<br><br>
 
 
