improve user profil

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,8 +21,9 @@
         <p class="text"><%= @user.city.name %></p>
         <br>
         <div class="p-1 mb-1">
+          <%= link_to "Mon profil" , edit_user_path(@user), class: "btn btn-primary" %>
           <%= link_to "Paramètres", edit_user_registration_path, class: "btn btn-primary" %> 
-          <%= link_to "Mon compte", edit_user_path(@user), class: "btn btn-primary" %></div>
+          </div>
         </div>
       </div> 
     </div>
