add production url to emails

--- a/app/views/proposal_mailer/confirmation_proposal.html.erb
+++ b/app/views/proposal_mailer/confirmation_proposal.html.erb
@@ -11,6 +11,7 @@
  <p>
      Encore bravo pour ta super idée et à très vite sur Agora !
     </p>
+<p> <%= @url %>  <p>
 
    <p> L'équipe Agora <p> 
 
