--- a/app/views/proposal_mailer/confirmation_proposal.text.erb
+++ b/app/views/proposal_mailer/confirmation_proposal.text.erb
@@ -2,7 +2,9 @@ Salut <%= @user.first_name %> !
 ==========================================================
  
 Cet email t'informe que ta proposition a été acceptée par nos équipes. Tu peux désormais te rendre sur<%= @url %> pour la consulter et répondre aux commentaires des autres utilisateurs.
- 
+
+<%= @url %>  
+
 À très vite sur Agora !
 
 L'équipe Agora. 
